--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Signika:wght@300..700&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+
 :root{
     --border:#ebe9e9;
     --icon-color:#787878;
@@ -26,7 +28,7 @@ body,html{
 .shipping{
     width:100%;
     padding:12px 0px;
-     border-bottom: 1px solid var(--border);
+     /* border-bottom: 1px solid var(--border); */
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -54,6 +56,8 @@ body,html{
 .search-menu{
     width:100%;
     display: flex;
+     border-bottom: 1px solid var(--border);
+      border-top: 1px solid var(--border);
     align-items: center;
     justify-content: space-evenly;
      padding:20px 0px;
@@ -113,9 +117,28 @@ width:90%;
     top:-40%;
     right:-30%;
 }
-
+.category-container{
+      /* border-top: 1px solid var(--border); */
+      padding:14px 10px;
+}
+.category-container ul{
+    display: flex;
+    list-style: none;
+    gap:50px;
+    justify-content: center;
+}
+.category-container ul li{
+    /* text-decoration: none; */
+    color: #454545;
+    font-weight: 600;
+    cursor: pointer;
+    white-space: nowrap;
+}
+.category-container ul li:hover{
+    text-decoration: underline;
+}
 .slider{
-    padding:20px 0;
+    padding:0px 10px;
     width:var(--screen-size);
     width:85%;
     margin:0 auto;
@@ -206,6 +229,8 @@ border-radius: 14px;
 border:1px solid #ece9e9;
 padding:16px 14px;
 border-radius: 14px;;
+position: relative;
+overflow: hidden;
 
 }
 .product:hover{
@@ -241,6 +266,37 @@ box-shadow: 7px 7px 12px rgba(94, 93, 93, 0.1);
 .product .p-rating i{
     color:#F6A355;
 }
+.product .options{
+    position: absolute;
+    padding:8px;
+    z-index: 99;
+    background-color: transparent;
+    top:5%;
+    right:-45%;
+    transition:right 0.2s ease-in-out;
+}
+.product .options ul{
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap:6px;
+}
+.product .options ul li{
+    padding:3px;
+    border-radius: 3px;;
+    border:1px solid #e2e2e2;
+}
+.product .options ul li:hover {
+  box-shadow: 1px 1px 3px #969595;
+}
+
+.product .options ul li i{
+    color:#454545;
+    color: #787878;
+}
+.product:hover .options{
+    right:5%;
+}
 @media(max-width:630px){
 .products{
     grid-template-columns: repeat((2,1fr));
@@ -250,3 +306,13 @@ box-shadow: 7px 7px 12px rgba(94, 93, 93, 0.1);
     font-size: 0.9rem;
 }
 }
+
+/* utility classes */
+.underline{
+    text-decoration: underline;
+}
+.hidden{
+    display: none;
+}
+
+
