--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     --border:#ebe9e9;
     --icon-color:#787878;
     --screen-size:85%;
+      --text: #2E2E2E;
+      --primary: #FF8F9C;
 }
 *{
     box-sizing: border-box;
@@ -66,7 +68,9 @@ body,html{
   cursor: pointer;
   z-index: 10;
 }
-
+.closeSlide i:hover{
+  color:var(--primary)
+}
 .closeSlide img {
   max-width: 100%;
   max-height: 80vh;
@@ -157,6 +161,20 @@ width:90%;
     color: #454545;
     font-size: 28px;
     
+}
+.search-menu .menu a{
+  text-decoration: none;
+  color: var(--text);
+}
+.search-menu .menu i {
+    color: var(--text);
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.search-menu .menu i:hover {
+    color: var(--primary);
+    transform: scale(1.1);
 }
 .heart-count,.cart-count{
     padding:1px 2px;
