--- a/cart.css
+++ b/cart.css
@@ -38,11 +38,11 @@ body, html {
 
 .search-menu {
     width: 85%;
-    margin: 0 auto;
+    margin: 10px auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 14px 0;
+    padding: 10px 0;
     border-bottom: 1px solid var(--border);
 }
 
